fix bottom gap

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     width: 100%;
     height: 100vh;
     height: calc(var(--vh, 1vh) * 100);
-    padding: 4px;
+    padding: 4px 4px 0px 4px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -95,6 +95,7 @@ a {
 
 .control-bar {
     width: calc(100% + 8px);
+    padding-bottom: 4px;
 }
 
 .tab,
@@ -125,7 +126,7 @@ a {
 .panel {
     display: none;
     width: 100%;
-    height: calc(calc(var(--vh, 1vh) * 100) - 64px);
+    height: calc(calc(var(--vh, 1vh) * 100) - 64px + 4px);
     flex-direction: column;
     align-items: center;
     padding: 0 4px;
@@ -250,7 +251,7 @@ a {
 #book-list {
     width: 100%;
     height: 100%;
-    margin: 4px 0;
+    margin: 4px 0 0 0;
     overflow-y: scroll;
 }
 
